Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75916

When selecting elements on a form by dragging to select and then dragging to move the elements it will have the selection handles left behind

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.1.0 RC
    • 5.12.3
    • Tools: Designer
    • macOS 10.14.4 - Just selection handles
      macOS 10.12 - Elements too
    • 780490fdc3281ae5cb9e51a63647cbb4af6da00f (qt/qttools/5.15)

      When selecting elements on a form by dragging to select and then dragging to move the elements it will have the selection handles left behind. In some cases it will leave more than just the selection handles behind and it will appear to have a copy of the elements being dragged left where they were. Switching windows causes it to update and it will be correct again.

      This also only appears to happen when the elements are laid out in their own layout.

      To reproduce, drag select the elements in the layout on the form, then move the elements around to see the selection handles still drawn in the original location.

        1. qtbug75916.ui
          2 kB
          Andy Shaw
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes