Designer: Hide children's selection handles while D'n'D of hierarchy

Fixes: QTBUG-75916
Change-Id: I25658791292039439eb26a5a3963a3408b71bccc
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>